# stellar-primelendrow

./: ARCHITECTURE.md  PrimeLendRow.pptx  README.md  package-lock.json
lr_api/: .dockerignore  Cargo.toml
lr_api/src/: engine.rs
lr_api/src/api/: mailer.rs  verified.rs
lr_api/src/infra/: csrf.rs  db.rs  gc.rs  limiter.rs  login_guard.rs  rate.rs  storage.rs
lr_api/src/routes/: api_routes.rs
lr_contracts/collateral_vault/: Cargo.toml  README.md
lr_contracts/collateral_vault/src/: lib.rs  test.rs
lr_contracts/deposit_registry/: Cargo.toml  README.md
lr_contracts/deposit_registry/src/: lib.rs  test.rs
lr_contracts/loan_registry/: Cargo.toml  README.md
lr_contracts/loan_registry/src/: lib.rs  test.rs
lr_contracts/payment_registry/: Cargo.toml  README.md
lr_contracts/payment_registry/src/: lib.rs  test.rs
lr_engine/: Cargo.toml
lr_engine/src/: engine.rs
lr_engine/src/api/: mailer.rs  mod.rs  verified.rs
lr_engine/src/api/credit/: mod.rs  status.rs
lr_engine/src/api/kyc/: admin.rs  mod.rs  shared.rs  status.rs  submit.rs
lr_engine/src/api/lending/: admin.rs  apply.rs  collateral.rs  deposit.rs  deposits_list.rs  domain.rs  guarantors.rs  ledger.rs  loans.rs  lots.rs  mod.rs  payments.rs  policy.rs  pool.rs  quote.rs  repay.rs  shared.rs  withdraw.rs
lr_engine/src/api/users/: login.rs  logout.rs  mod.rs  password_reset.rs  register.rs  session.rs  shared.rs  verify.rs
lr_engine/src/api/wallets/: challenge.rs  connect.rs  disconnect.rs  list.rs  mod.rs  shared.rs
lr_engine/src/infra/: crypto.rs  csrf.rs  db.rs  gc.rs  limiter.rs  mod.rs  paypal.rs  rate.rs  stellar.rs  storage.rs
lr_engine/src/routes/: api_routes.rs
lr_frontend/: index.html  package-lock.json  package.json  vite.config.ts
lr_frontend/public/: robots.txt
lr_frontend/src/: primelendrow.tsx
lr_frontend/src/elements/: AppShell.tsx  Sidebar.tsx  Theme.tsx
lr_frontend/src/functions/: ApiFunctions.ts  AuthFunctions.tsx  useCreditScore.ts
lr_frontend/src/pages/: Admin.tsx  Auth.tsx  Borrow.tsx  Dashboard.tsx  KYC.tsx  Landing.tsx  Lending.tsx  Pay.tsx  Settings.tsx
lr_frontend/src/providers/: AccentProvider.tsx  AccessProvider.tsx  RoutesProvider.tsx  SEOProvider.tsx  SessionProvider.tsx  useToast.ts  (+3 more)
(+118 files in other folders)
