[package]
name = "lr_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "chrono"] }
argon2 = "0.5"
aes-gcm = "0.10"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
subtle = "2.6.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tower-http = { version = "0.7", features = ["cors", "set-header", "trace"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
dashmap = "6"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
base64 = "0.22"
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
rand = "0.10.0"
tracing = "0.1.44"

[[bin]]
name = "lr_engine"
path = "src/engine.rs"