[package]
name = "collateral-vault"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = "23"

[dev-dependencies]
soroban-sdk = { version = "23", features = ["testutils"] }

# Standard Soroban release profile: tiny, deterministic wasm with overflow
# checks kept ON — this contract holds user funds, a silent wrap is not
# acceptable even in release.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
